# examples

./: README.md
BuildSystemsTests/: Makefile  Readme.md  build.ninja  depen.c  main.c
CefSimpleClient/: .gitignore  CMakeLists.txt  LICENSE  Readme.md  SimpleApp.h  SimpleHandler.h  main.cpp
GraphQlServerDemo/: .drone.yml  GraphQlDemo.sln  License  Readme.md
GraphQlServerDemo/GraphQlDemo/: GraphQlDemo.csproj  Mutations.cs  Program.cs  Query.cs  Startup.cs
GraphQlServerDemo/GraphQlDemo/Data/: Book.cs
GraphQlServerDemo/GraphQlDemo/Properties/: launchSettings.json
GraphQlServerDemo/GraphQlDemo/Repository/: BookRepository.cs
GtkValaExample/: Readme.md  main.vala  meson.build
GtkValaExample/.github/workflows/: main.yml
Markown/: README.md
actix-paperclip/: Cargo.toml
actix-paperclip/test/: package.json
angular-demo/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  pnpm-lock.yaml
angular-demo/e2e/src/: app.e2e-spec.ts
angular-demo/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
angular-demo/src/app/board/: board.component.html  board.component.scss  board.component.ts
angular-demo/src/app/square/: square.component.ts
backblaze.rs/: .env  Cargo.toml
backblaze.rs/src/: main.rs
csharp-gitpod/: .gitpod.Dockerfile  .gitpod.yml  Program.cs  Readme.md  csharp-gitpod.csproj
deno-queues/: consumer.ts  publisher.ts
diesel_demo/: .env  README.md
diesel_demo/src/: schema.rs
django/djangoapp/: settings.py  urls.py
django/polls/: urls.py  views.py
django/polls/migrations/: 0001_initial.py
django/polls/templates/polls/: index.html
dotnet/: Program.cs
dotnet/Controllers/: WeatherForecastController.cs
dotnet/Properties/: launchSettings.json
embededdb_rust/: .gitignore  Cargo.toml  Readme.md
embededdb_rust/src/: _ejdb.rs  _polo.rs  main.rs
flask/: main.py
flutter_flexcolorscheme/: README.md  pubspec.yaml
flutter_flexcolorscheme/android/app/: build.gradle
flutter_flexcolorscheme/android/app/src/main/: AndroidManifest.xml
flutter_flexcolorscheme/android/app/src/main/kotlin/com/example/flutter_flexcolorscheme/: MainActivity.kt
flutter_flexcolorscheme/android/app/src/profile/: AndroidManifest.xml
flutter_flexcolorscheme/ios/Runner/: Info.plist
flutter_flexcolorscheme/ios/Runner.xcodeproj/: project.pbxproj
flutter_flexcolorscheme/lib/src/: app.dart  statefulbutton.dart
flutter_flexcolorscheme/lib/src/localization/: app_en.arb
flutter_flexcolorscheme/linux/: CMakeLists.txt  my_application.cc
flutter_flexcolorscheme/macos/Runner.xcodeproj/: project.pbxproj
flutter_flexcolorscheme/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_flexcolorscheme/macos/Runner/Configs/: AppInfo.xcconfig
flutter_flexcolorscheme/web/: index.html  manifest.json
flutter_flexcolorscheme/windows/: CMakeLists.txt
flutter_flexcolorscheme/windows/runner/: Runner.rc  main.cpp
golang/: Readme.md  go.mod  go.sum  main.go
golang-echo/: go.mod  main.go
golang-echo-graphql/: go.mod  go.sum  handler.go  main.go
golang-echo-graphql/graphql/: graphql.go  handler.go  query.go
golang-echo-graphql/graphql/fields/: users.go
golang-echo-graphql/models/: user.go
golang/api/: albums.go  auth.go
golang/db/: db.go
gstreamer-tutorials/: .gitignore  Readme.md  helloworld.c  makefile
gtk4rs-example/: Cargo.toml
hello/: main.go  main.py
iced_test/: Cargo.toml
iced_test/src/: main.rs
preact-wmr/: package.json  pnpm-lock.yaml
preact-wmr/public/pages/about/: index.tsx
quic-rust/: Cargo.toml
quic-rust/src/: client.rs  server.rs
r2-test/: Cargo.toml
r2-test/b2/: Cargo.toml
r2-test/b2/src/: main.rs
r2-test/r2/src/: main.rs
rust/: Cargo.toml
rust-actix-paperclip/src/: main.rs
rust-actix-paperclip/test/: api.yaml  pnpm-lock.yaml
rust-actix-paperclip/test/src/routes/: +page.svelte
rust-crossplatform/: Cargo.toml
rust-crosssockets/: Cargo.toml
rust-crosssockets/proto/: hello.proto
rust-crosssockets/src/: client.rs  main.rs  prometheus.rs  proto.rs  server.rs
rust-diesel_demo/: .gitignore  Cargo.toml
rust-diesel_demo/migrations/2022-07-24-171119_create_posts/: up.sql
rust-diesel_demo/src/: main.rs  models.rs
rust-gtk4rs-example/src/: main.rs
rust-quic/: Cargo.toml
rust-sqlx/: .env  Cargo.toml  rundb.sh
rust-sqlx/migrations/: 0001_v1.sql  0002_v2.sql
rust-sqlx/src/: main.rs
rust-tonic-test/: Cargo.toml
rust-wgpu/src/: state.rs
rust-wgpu/src/shaders/: cube.wgsl
rust/src/: main.rs
short-uuid-rs/: Cargo.toml
short-uuid-rs/src/: main.rs
sshtest/: Cargo.toml
sshtest/src/: main.rs
tonic-test/: README.md  build.rs
tonic-test/proto/: echo.proto
tonic-test/src/: client.rs  server.rs
typescript-solid-start/: app.config.ts  pnpm-lock.yaml
typescript-solid-start/src/components/: New.tsx
typescript-solid-start/src/routes/: index.tsx
wgpu/: Cargo.toml
wgpu/src/: cube.rs  framework.rs  main.rs  mgr.rs
