[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ejdb = "0.4"
unqlite = "1.5.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
polodb_bson = "0.10.0"
polodb_core = "0.10.0"