[package]
name = "iced_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "*", default-features = false, features = ["tokio", "glow"] }
# iced_native = { version = "*"}
iced_futures = { version = "*"}