[package]
name = "quic-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.79"
directories-next = "2.0.0"
quinn = { version = "0.10.2", features = ["ring", "runtime-tokio", "rustls", "tls-rustls"] }
rcgen = "0.12.0"
#rustls = { version = "0.22.1", features = ["ring", "rustversion", "logging"]}
rustls = { version = "0.21.10", features = []}
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "fmt", "env-filter"] }
tokio = { version = "1.35.1", features = ["full", "parking_lot"] }
rustls-pki-types = "1.1.0"
clap = { version = "4.4.12", features = [] }
url = "2.5.0"
