[package]
name = "rust-crosssockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.25.0", features = ["full"]}
async-stream = "0.3"
prometheus = "0"
lazy_static = "1.4.0"
prometheus-static-metric = "0.5.1"
tonic = "0.8.3"
prost = "0.11.6"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.8.4"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "prometheus"
path = "src/prometheus.rs"


# [target.'cfg(windows)'.dependencies]
# tokio = {version = "1.25.0", features = ["full"]}

# [target.'cfg(unix)'.dependencies]
