[package]
name = "wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0"
env_logger = "0.10.0"
log = "0.4"
wgpu = "0.15.0"
pollster = "0.2.5"
bytemuck = { features = ["derive"], version = "1.0.107"}
syn = "1.0"

[[bin]]
name = "cube"
path = "src/cube.rs"